Fix icon alignment when there are no labels

--- a/src/components/mode-tools/mode-tools.css
+++ b/src/components/mode-tools/mode-tools.css
@@ -19,5 +19,7 @@
 }
 
 .mod-labeled-icon-height {
+    display: flex;
     height: 2.85rem; /* for the second row so the dashed borders are equal in size */
+    align-items: center;
 }
